Fri Mar  7 15:30:15 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Missed one place where flags_ was used

Fri Mar  7 15:26:15 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Fixed a data race condition related to the ACE_Log_Msg::flags_
          static variable. Setting/retrieving it from application code
          was using a lock, but the ACE_Log_Msg::log didn't use the lock
          in the part where it is building up the ACE Log Record. Put
          a flags variable on the stack which we only set once using the
          accessor method which uses the lock, than check that flag
          inside the method.

Fri Mar  7 12:37:04 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_Hash_T.cpp:
          Initialize pointer member explicitly to zero to resolve
          Coverity error

Fri Mar  7 12:02:17 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Reactor_Token_T.cpp:
          Use copy constructor instead of assignment operator

        * ace/Timer_Hash_T.h:
        * ace/Timer_List_T.h:
        * ace/WFMO_Reactor.h:
          Doxygen improvements

        * ace/WFMO_Reactor.cpp:
        * ace/Timer_Heap_T.cpp:
          Layout changes

Fri Mar  7 11:56:10 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_Queue_T.h:
        * ace/Timer_Queue_T.inl:
        * ace/Timer_Queue_T.cpp:
          Moved the expire() method from the inline to the cpp, it is
          virtual so can't be inlined. Further, the expire() method
          had an optimization that it checked is_empty() before
          callig the real expire that grabs the lock. This is causing
          a potential data race because the timer hash overrides is_empty
          and uses a member variable to determine whether the queue
          is empty or not, this is now accessed without having the